// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OffchainOrderLineItem should render type EXCHANGE_RATE 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c4 {
  cursor: auto;
  color: #7D7D7D;
}

.c5 {
  text-align: right;
  overflow-wrap: break-word;
}

.c6 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

<span
    class="t_light is_inversed _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0 c1 c2"
      >
        <div
          class="c3 c4 css-142zc9n"
          data-testid="swap-li-label"
        >
          Rate
        </div>
        <div
          class="c3 c5 css-142zc9n"
        >
          <button
            class="c6"
            title="1 USDC = <0.00001 DAI "
          >
            <div
              class="c3 css-142zc9n"
            >
              1 USDC = &lt;0.00001 DAI 
            </div>
             
          </button>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem should render type NETWORK_COST 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c4 {
  cursor: auto;
  color: #7D7D7D;
}

.c5 {
  text-align: right;
  overflow-wrap: break-word;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0 c1 c2"
      >
        <div
          class="c3 c4 css-142zc9n"
          data-testid="swap-li-label"
        >
          Network cost
        </div>
        <div
          class="c3 c5 css-142zc9n"
        >
          <span>
            $0
          </span>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;

exports[`OffchainOrderLineItem should render type TRANSACTION_ID 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c6:hover {
  opacity: 0.6;
}

.c6:active {
  opacity: 0.4;
}

.c4 {
  cursor: auto;
  color: #7D7D7D;
}

.c5 {
  text-align: right;
  overflow-wrap: break-word;
}

<span
    class=" _dsp_contents"
  >
    <span
      class=" t_light _dsp_contents is_Theme"
    >
      <div
        class="c0 c1 c2"
      >
        <div
          class="c3 c4 css-142zc9n"
          data-testid="swap-li-label"
        >
          Transaction ID
        </div>
        <div
          class="c3 c5 css-142zc9n"
        >
          <a
            class="c6"
            href="https://etherscan.io/tx/0x123"
            rel="noopener noreferrer"
            target="_blank"
          >
            0x12...x123
          </a>
        </div>
      </div>
    </span>
  </span>
</DocumentFragment>
`;
